k8s/base/gridstudy-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gridstudy-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # springfox swagger-ui uses X-Forwarded-Prefix to find the
    # base url when behind a reverse proxy.
    # nginx-ingress-controller V0.24 has a simple alternative
    # but latest minikube 1.1.0 uses V0.23 (untested):
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "/gridstudy"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/gridstudy$ /gridstudy/ permanent;
      proxy_set_header X-Forwarded-Prefix         /gridstudy/;
      if ($request_uri ~ "^/gridstudy(/.*)") {
        proxy_pass http://upstream_balancer$1;
        break;
      }
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes off;
spec:
  rules:
  - http:
      paths:
      - path: /gridstudy
        backend:
          serviceName: gridstudy-app
          servicePort: 80
